arcade-k8s-config/arcade/ingress/arcade-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: arcade-ingress
  namespace: arcade-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /arcade/$2
spec:
  rules:
  - host: proto.canfar.net
    http:
      paths:
      - path: /arcade(/|$)(.*)
        backend:
          serviceName: arcade-tomcat-svc
          servicePort: 8080
