arcade-k8s-config/arcade/ingress/desktop-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: desktop-ingress
  namespace: arcade-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /desktop/$2
spec:
  rules:
  - host: proto.canfar.net
    http:
      paths:
      - path: /desktop(/|$)(.*)
        backend:
          serviceName: arcade-wsproxy-svc
          servicePort: 8080
